[gd_scene load_steps=2 format=3 uid="uid://result001"]

[ext_resource type="Script" path="res://scripts/game/result.gd" id="1"]

[node name="Result" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.08, 0.08, 0.14, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 60

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1

[node name="WinnerLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="ResultsLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
horizontal_alignment = 1

[node name="PlayerResults" type="VBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="MarketLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="MarketResults" type="VBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Spacer" type="Control" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="MarginContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 65)
theme_override_font_sizes/font_size = 24
text = "Back to Lobby"
